2 files modified, 1 deleted

--- a/index.html
+++ b/index.html
@@ -1,11 +1,117 @@
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <title>Parallax Website using simpleparallax js</title>
     <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
+    <section>
+      <h2>Parallax Website using simpleparallax js</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. A scelerisque purus
+        semper eget duis at tellus at. Aliquet nibh praesent tristique magna sit
+        amet purus gravida quis. Dui id ornare arcu odio ut sem. Lacus sed
+        viverra tellus in hac habitasse. Tortor aliquam nulla facilisi cras
+        fermentum. Consectetur libero id faucibus nisl tincidunt eget nullam non
+        nisi. Id porta nibh venenatis cras sed felis eget velit. Vulputate ut
+        pharetra sit amet aliquam id. Nulla pharetra diam sit amet nisl suscipit
+        adipiscing. Suscipit tellus mauris a diam maecenas sed enim ut sem.
+        Massa sed elementum tempus egestas sed sed. Nullam vehicula ipsum a arcu
+        cursus vitae congue. Rhoncus urna neque viverra justo nec ultrices dui
+        sapien eget. Justo donec enim diam vulputate ut pharetra sit amet
+        aliquam. Pretium vulputate sapien nec sagittis. Praesent tristique magna
+        sit amet. Lectus urna duis convallis convallis tellus id.
+      </p>
+    </section>
+    <div class="parallaxbg">
+      <img
+        src="https://raw.githubusercontent.com/joacoARG/parallax-website-using-simpleparallax-js/master/wallhaven-496l8d.jpg"
+        alt=""
+        class="parallaximg1"
+      />
+    </div>
+    <h2>Left</h2>
+    <section>
+      <p>
+        Interdum velit euismod in pellentesque massa placerat duis. In arcu
+        cursus euismod quis viverra nibh. Justo donec enim diam vulputate ut
+        pharetra. Posuere ac ut consequat semper viverra nam libero. Urna
+        porttitor rhoncus dolor purus non enim. Risus sed vulputate odio ut enim
+        blandit volutpat. Curabitur gravida arcu ac tortor. Cursus mattis
+        molestie a iaculis at erat pellentesque. Viverra nibh cras pulvinar
+        mattis. Aenean vel elit scelerisque mauris pellentesque pulvinar
+        pellentesque habitant. A diam sollicitudin tempor id eu nisl nunc mi
+        ipsum.
+      </p>
+    </section>
+    <div class="parallaxbg">
+      <img
+        src="https://raw.githubusercontent.com/joacoARG/parallax-website-using-simpleparallax-js/master/wallhaven-g887w7.jpg"
+        alt=""
+        class="parallaximg2"
+      />
+    </div>
+    <h2>Right</h2>
+    <section>
+      <p>
+        Tellus elementum sagittis vitae et leo duis ut. Morbi quis commodo odio
+        aenean. Ipsum consequat nisl vel pretium lectus quam id leo. Nullam eget
+        felis eget nunc lobortis mattis aliquam faucibus. Habitasse platea
+        dictumst quisque sagittis purus sit amet volutpat consequat. Id
+        consectetur purus ut faucibus. Neque vitae tempus quam pellentesque nec
+        nam aliquam. Faucibus et molestie ac feugiat sed. Arcu non sodales neque
+        sodales ut etiam sit. Morbi tristique senectus et netus et malesuada
+        fames ac.
+      </p>
+    </section>
+    <div class="parallaxbg">
+      <img
+        src="https://raw.githubusercontent.com/joacoARG/parallax-website-using-simpleparallax-js/master/wallhaven-n6o8o7.jpg"
+        alt=""
+        class="parallaximg3"
+      />
+    </div>
+    <h2>Up</h2>
+    <section>
+      <p>
+        Sed turpis tincidunt id aliquet risus. Enim ut tellus elementum sagittis
+        vitae et leo. In metus vulputate eu scelerisque felis imperdiet proin
+        fermentum leo. Viverra maecenas accumsan lacus vel facilisis volutpat.
+        Nisi porta lorem mollis aliquam ut porttitor leo. Eget gravida cum
+        sociis natoque. Tortor consequat id porta nibh venenatis cras sed felis.
+        Viverra tellus in hac habitasse. Tellus in metus vulputate eu
+        scelerisque. Dictum fusce ut placerat orci nulla pellentesque. Diam
+        sollicitudin tempor id eu nisl nunc. Commodo odio aenean sed adipiscing
+        diam donec adipiscing tristique risus. Eget sit amet tellus cras
+        adipiscing enim eu turpis. Sit amet nisl suscipit adipiscing bibendum
+        est ultricies.
+      </p>
+    </section>
+    <div class="parallaxbg">
+      <img
+        src="https://raw.githubusercontent.com/joacoARG/parallax-website-using-simpleparallax-js/master/wallhaven-nzm13y.jpg"
+        alt=""
+        class="parallaximg4"
+      />
+    </div>
+    <h2>Down</h2>
+    <section>
+      <p>
+        Accumsan sit amet nulla facilisi morbi tempus iaculis. Laoreet id donec
+        ultrices tincidunt arcu non sodales neque sodales. Aliquet lectus proin
+        nibh nisl condimentum id venenatis a. Elit ut aliquam purus sit amet
+        luctus venenatis. Pharetra et ultrices neque ornare aenean euismod.
+        Vestibulum sed arcu non odio euismod lacinia at quis. Sit amet justo
+        donec enim. Nunc sed augue lacus viverra vitae congue eu. Pulvinar
+        sapien et ligula ullamcorper malesuada proin. Aliquam purus sit amet
+        luctus venenatis lectus magna fringilla. Donec ultrices tincidunt arcu
+        non sodales. Nisi porta lorem mollis aliquam ut porttitor leo a.
+        Placerat in egestas erat imperdiet sed euismod nisi. In ornare quam
+        viverra orci sagittis. Luctus venenatis lectus magna fringilla urna.
+        Etiam non quam lacus suspendisse faucibus interdum posuere.
+      </p>
+    </section>
   </body>
 </html>
